tests/baselines/reference/parserErrorRecovery_VariableList1.errors.txt
==== tests/cases/compiler/parserErrorRecovery_VariableList1.ts (1 errors) ====
    var a,
         ~
!!! parserErrorRecovery_VariableList1.ts(1,6): error TS1009: Trailing separator not allowed.
    return;